tests/compile_fail/state/multiple_superstate_attrs.stderr
error: multiple `moku::superstate` attributes defined for this `moku::State`
  --> tests/compile_fail/state/multiple_superstate_attrs.rs:13:5
   |
13 |     #[superstate(Top)]
   |     ^
